# ChangeLog for dev-ruby/ruby-pg
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Oct 2008; Alex Legler <gentoo@a3li.info>
  +ruby-pg-0.7.9.20080817.ebuild:
  Initial ebuild, done by /me, requested in bug #215510 (Ruby 1.9
  compatible)
