@@ -1,4 +1,6 @@
 DIST pg-0.7.9.2008.08.17.gem 57344 RMD160 3a68d54dfcf6de3facc7203e288ce049c193e11c SHA1 ad569cade4a5ac3c7074a7261ed11bd1c56c1f32 SHA256 bb1623447aecb0387adf8abe43859e63851b529b6d16fdb679a71c21c8b3f3f1
+DIST pg-0.7.9.2008.10.05.gem 57344 RMD160 948381f59f6fd09e6858366a3cadb73c1e77e819 SHA1 2f2cca008531f20bc18195bbc219197d6f6febeb SHA256 9211b028cb5d5ad302058fc76b0a637cd0b8f485ade3eff40046a752b68c6d9d
 EBUILD ruby-pg-0.7.9.20080817.ebuild 721 RMD160 ef29baa5cebceca4411af1223ece5c2fc9b2ba15 SHA1 379587acdcca22dcb7efae0428eb6d4855df22fe SHA256 8f19e99ae624012efff582fdc9a4cc2e10eccae850e0a5482423ebd5a37409aa
-MISC ChangeLog 278 RMD160 747811297e16d483b2a3547399a8416221af0e84 SHA1 0d6dac5058ef1e1e3691faecb6dc84d5c02ce86b SHA256 62a9e2b2392acfbada5909fc23ad61a84a208374e96036dac4a87b8b28ff0da7
+EBUILD ruby-pg-0.7.9.20081005.ebuild 721 RMD160 6493ea9ac46e0eea5d500f23c3c5563890b24205 SHA1 549c740945ab7e1b37f5569518134c110b16a3e5 SHA256 612a9c4643b0536dbdafc8f26645588898a11d28674616bb365a77e1d3c9d728
+MISC ChangeLog 374 RMD160 7814c76a1ce592c8c2be1906d7f5bf14bd91fd8d SHA1 0aae8769abf85b0242e2c5246e712d6a38e60c31 SHA256 6ab7dcacd4af5b2af4e04ff0656f15a82145c682b01f4d145768c9dfe8b4840a
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
